# krnl

./: .gitignore  CMakeLists.txt  README.MD  README.md  build_iso.sh  kernel.c  krnl.elf  krnl.sym  linker.ld  loader.s  makefile
.github/workflows/: main.yml
boot/: CMakeLists.txt  boot.asm
docs/: index.html
drivers/: CMakeLists.txt  display.h  keyboard.c
drivers/pci/: pci.h
drivers/pic/: pic.c  pic.h
drivers/pit/: pit.c  pit.h
drivers/ps2/: keyboard.c  keyboard.h  sc.h
drivers/vga/: BGA.c  BGA.h
iso/boot/: kernel.elf
iso/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  asmfunc.s  exceptions.asm  exceptions.c  fs.h  gdt.asm  gdt.c  gdt.h  gdt.s  interrupts.c  interrupts.h  io.h  kernel.c  memmap.h  memory.h  multiboot.h  process.h  screen.c  screen.h  serial.c  serial.h  tty.h  utils.h  video.c  video.h
kernel/sys/: CMakeLists.txt  abort.c  abort.h  sleep.c  sleep.h
libc/: libc.code-workspace  makefile
libc/include/: stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
libc/stdio/: stdio.c
libc/stdlib/: stdlib.c
libc/string/: string.c
sys/: abort.c
